--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Headland+One&family=Karla:wght@300&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
+    <style>* {
+      font-family: "Quicksand", sans-serif;
+    }</style>
     <title>BackOffice MSPR</title>
   </head>
   <body>
